feat: Adicionar configuração e documentação do Swagger para o endpoint de cadastro de curso

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,8 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 
+# SWAGGER
+springdoc.swagger-ui.path=/docs-api.html
+springdoc.api-docs.path=/docs-api
+springdoc.packagesToScan=com.cursosapi.cursos.web.controller
+
