feat: Adição da classe SpringTimezoneConfig e adição da config do locale no application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+# Locale
+# Indica que a próxima propriedade locale deverá ser usada como default
+spring.web.locale-resolver=fixed
+spring.web.locale=pt_BR
+
 # DATASOURCE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:file:./curso
