--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,13 @@
 			<artifactId>modelmapper</artifactId>
 			<version>3.2.0</version>
 		</dependency>
-    </dependencies>
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+			<version>3.2.5</version>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
